--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>RSTICTACTOE</title>
     </head>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./tic-tac-toe.png" type="image/icon type">
     <body>
 
         <div class="modal">
