--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
 
         <div class="grid_container">
 
-            <div class="cell1 cell"></div>
-            <div class="cell2 cell"></div>
-            <div class="cell3 cell"></div>
-            <div class="cell4 cell"></div>
-            <div class="cell5 cell"></div>
-            <div class="cell6 cell"></div>
-            <div class="cell7 cell"></div>
-            <div class="cell8 cell"></div>
-            <div class="cell9 cell"></div>
-            <div class="cell7 cellx"></div>
-            <div class="cell8 cellx"></div>
-            <div class="cell9 cellx"></div>
+            <div class="cell"></div>
+            <div class=" cell"></div>
+            <div class=" cell"></div>
+            <div class=" cell"></div>
+            <div class=" cell"></div>
+            <div class=" cell"></div>
+            <div class=" cell"></div>
+            <div class=" cell"></div>
+            <div class=" cell"></div>
+            <div class=" cellx"></div>
+            <div class=" cellx"></div>
+            <div class=" cellx"></div>
 
         </div>
         <script src="app.js"></script>
