remove bugs and display play again

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         <div class="grid_container">
 
             <div class="cell"></div>
-            <div class=" cell"></div>
-            <div class=" cell"></div>
-            <div class=" cell"></div>
-            <div class=" cell"></div>
-            <div class=" cell"></div>
-            <div class=" cell"></div>
-            <div class=" cell"></div>
-            <div class=" cell"></div>
-            <div class=" cellx"></div>
-            <div class=" cellx"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cellx"></div>
+            <button class="reset">Play Again</button>
             <div class=" cellx"></div>
 
         </div>
