--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport"
+            content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
         <title>RSTICTACTOE</title>
     </head>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./tic-tac-toe.png" type="image/icon type">
-    <body>
+    <body class="body_tag">
 
         <div class="modal">
 
@@ -32,8 +33,13 @@
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
-            <div class="cellx"></div>
-            <button class="reset">Play Again</button>
+            <button class="dark_mode"><img src="./moon.svg"
+                    class="dark_image"></button>
+            <button class="reset"><img
+                    src="./retry.svg" class="retry_image" /></button>
+            <div class=" cellx"></div>
+            <div class=" cellx"></div>
+            <div class=" cellx"></div>
             <div class=" cellx"></div>
 
         </div>
