--- a/index.html
+++ b/index.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-            content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-        <title>RSTICTACTOE</title>
-    </head>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./tic-tac-toe.png" type="image/icon type">
-    <body class="body_tag">
 
-        <div class="modal">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <title>RSTICTACTOE</title>
+</head>
+<link rel="stylesheet" href="style.css">
+<link rel="icon" href="./tic-tac-toe.png" type="image/icon type">
 
-            <button class="single">Single Player</button>
+<body class="body_tag">
 
-            <button class="two">Two Player</button>
+    <div class="modal">
 
-        </div>
+        <button class="single">Single Player</button>
 
-        <div class="msg_container">
-            TIC TAC TOE
-        </div>
+        <button class="two">Two Player</button>
 
-        <div class="grid_container">
+    </div>
 
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <button class="dark_mode"><img src="./moon.svg"
-                    class="dark_image"></button>
-            <button class="reset"><img
-                    src="./retry.svg" class="retry_image" /></button>
+    <div class="msg_container">
+        TIC TAC TOE
+    </div>
 
-        </div>
-        <script src="app.js"></script>
+    <div class="grid_container">
 
-    </body>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <button class="dark_mode"><img src="./moon.svg" class="dark_image"></button>
+        <button class="reset"><img src="./retry.svg" class="retry_image" /></button>
+
+    </div>
+    <script src="app.js"></script>
+
+</body>
+
 </html>
